cleaning up interfaces

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,7 @@
 </head>
 <body>
 
-  <my-plugin-nr-two first="Stencil" last="'Don't call me a framework' JS">
-
-  </my-plugin-nr-two>
+  <my-plugin-nr-two></my-plugin-nr-two>
 
 </body>
 </html>
